Added earthquakes for city (1st task)

--- a/Earthquakes.Web/index.html
+++ b/Earthquakes.Web/index.html
@@ -26,10 +26,10 @@
             <h4>Earthquakes in the city</h4>
             <div class="navbar-btn">
                 City name:<br />
-                <input id="city-name" />
+                <input id="city-name" value="Los Angeles"/>
             </div>
             <div class="navbar-btn">
-                <button>Show!</button>
+                <button onclick="showClick()">Show!</button>
             </div>
         </div>
         <div id="map-canvas"></div>
