Added top 10 largest earthquakes (2nd task)

--- a/Earthquakes.Web/index.html
+++ b/Earthquakes.Web/index.html
@@ -35,6 +35,9 @@
         <div id="map-canvas"></div>
         <div>
             <h4>Top 10 World's largest earthquakes in the last 12 months</h4>
+            <div class="navbar-btn">
+                <table id="top10" class="table"></table>
+            </div>
         </div>
         <hr />
         <footer>
